# ods_exercise

./: .gitignore  README.md
rust/: Cargo.toml
rust/ch1/: 1_1-1.rs  1_1-2.rs  1_1-3.rs  1_1-4.rs  1_1-5.rs  1_1-6.rs  sample.txt  sample_blank.txt
