[package]
name = "ods-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "1_1-1"
path = "ch1/1_1-1.rs"

[[example]]
name = "1_1-2"
path = "ch1/1_1-2.rs"

[[example]]
name = "1_1-3"
path = "ch1/1_1-3.rs"

[[example]]
name = "1_1-4"
path = "ch1/1_1-4.rs"

[[example]]
name = "1_1-5"
path = "ch1/1_1-5.rs"
